<resources>
    <string name="app_name">VandraByApp</string>

    <!--hints for edit boxes-->
    <string name="hint_enter_your_email">Введите ваш e-mail</string>
    <string name="hint_enter_your_password">Введите ваш пароль</string>
    <string name="hint_name_your_route">Назовите ваш маршрут</string>

    <!--text for labels and buttons-->
    <string name="text_enter">Войти</string>
    <string name="text_register">Регистрация</string>
    <string name="text_forgot_password"><u>Забыли пароль?</u></string>
    <string name="text_or">Или</string>
    <string name="text_no_account">Ещё нет аккаунта?</string>
    <string name="text_next">Далее</string>
    <string name="text_skip">Пропустить</string>
    <string name="text_start">Начать</string>
    <string name="text_start_point">Откуда поедете?</string>
    <string name="text_end_point">Выберите конечную точку маршрута.</string>
    <string name="text_save_route">Сохранить маршрут</string>
    <string name="text_save">Сохранить</string>
    <string name="text_route">Маршрут</string>
    <string name="text_route_name">Название маршрута</string>
    <string name="text_back">Назад</string>

    <!--text for radio buttons-->
    <string name="text_my_location">Моё местоположение</string>
    <string name="text_indicate_on_map">Указать на карте</string>
    <string name="text_choose_place">Выбрать населённый пункт</string>
    <string name="text_return_to_start">Вернуться в точку отправления</string>
    <string name="text_choose_from_route_places">Выбрать из объектов маршрута</string>

    <!--text for menu items-->
    <string name="menu_swipes">Свайпы</string>
    <string name="menu_routes">Маршруты</string>
    <string name="menu_profile">Профиль</string>

    <!--default user values-->
    <string name="text_default_user_name">Имя Пользователя</string>
    <string name="text_default_user_nickname">email@gmail.com</string>

    <!--default place values-->
    <string name="text_default_place_name">Название объекта</string>
    <string name="text_default_place_location">РБ, Минская обл, город Минск</string>
    <string name="text_default_place_description">Длинное описание места</string>
    <string name="text_default_place_build_year">2999</string>
    <string name="text_default_place_style">Барокко</string>

    <!--onboarding activity texts-->
    <string name="text_onboarding_1">Выбирайте понравившиеся достопримечательности</string>
    <string name="text_onboarding_2">Добавляйте их в маршрут</string>
    <string name="text_onboarding_3">Путешествуйте и открывайте для себя Беларусь!</string>

    <!--default route values-->
    <string name="text_default_route_name">Название маршрута</string>
</resources>