<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    tools:context=".activities.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/text_start_point"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_my_location" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_indicate_on_map" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_choose_place" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/text_end_point"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_return_to_start" />


                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_indicate_on_map" />


                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_choose_from_trip_places" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_choose_place" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/selector_blue_button"
                android:text="@string/text_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>