<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_blue"
    android:paddingHorizontal="30dp"
    tools:context=".activities.login.LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_vandra_logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="88dp"
        android:background="@drawable/selector_input_field"
        android:hint="@string/hint_enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/text_padding"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_input_field"
        android:hint="@string/hint_enter_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/text_padding"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_login" />

    <Button
        android:id="@+id/button_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_blue_button"
        android:text="@string/text_enter"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/text_forgot_password"
        android:textColor="@color/gray"
        android:textColorLink="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_divider_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password">

        <View
            android:id="@+id/divider_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider_text"
            app:layout_constraintStart_toStartOf="@id/layout_divider_or"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/divider_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="@dimen/text_padding"
            android:text="@string/text_or"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_divider_or"
            app:layout_constraintStart_toStartOf="@id/layout_divider_or"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_divider_or"
            app:layout_constraintStart_toEndOf="@id/divider_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_divider_or">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@null"
            android:src="@drawable/ic_sign_in_vk" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@null"
            android:src="@drawable/ic_sign_in_facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@null"
            android:src="@drawable/ic_sign_in_google" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_account"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_register"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/selector_blue_button_2"
            android:text="@string/text_register"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>