<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_gradient_blue"
    tools:context=".activities.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <FrameLayout
                    android:id="@+id/layout_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/text_default_place_name"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_place_details_calendar" />

                        <TextView
                            android:id="@+id/text_place_build_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_default_place_build_year"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:src="@drawable/ic_place_details_style" />

                        <TextView
                            android:id="@+id/text_place_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_default_place_style"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_place_details_map_pin_blue" />

                    <TextView
                        android:id="@+id/text_place_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_default_place_location"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text_place_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_place_description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_buttons_like_dislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="22dp"
                    android:src="@drawable/ic_swipes_like" />

                <ImageView
                    android:id="@+id/btn_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="22dp"
                    android:src="@drawable/ic_swipes_dislike" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>