<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_blue"
    tools:context=".activities.onboarding.OnboardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120dp"
        app:ci_animator="@animator/no_scale"
        app:ci_drawable="@drawable/ic_circle_indicator_blue"
        app:ci_drawable_unselected="@drawable/ic_circle_indicator_white"
        app:ci_gravity="center"
        app:ci_height="10dp"
        app:ci_width="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_vandra_logo_onboarding" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="45dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:id="@+id/layout_buttons_skip_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_skip"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/selector_blue_button_2"
                android:text="@string/text_skip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/selector_blue_button"
                android:text="@string/text_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Button
                android:id="@+id/button_start"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_blue_button"
                android:text="@string/text_start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>